<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app name -->
    <string name="app_name">Android Messenger App</string>

    <!-- fragment sign up -->
    <string name="acquainted">Let\'s get acquainted</string>
    <string name="fillOut">Fill out the profile and go to the application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="remember_me">Remember me</string>
    <string name="google">GOOGLE</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">REGISTER</string>
    <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
    <string name="or">or</string>

    <!-- fragment sign up extended -->
    <string name="your_profile_data">Your profile data</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="user_name">User name</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="forward">forward</string>

    <!-- fragment sign in -->
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="login">LOGIN</string>

    <!-- fragment dialog -->
    <string name="add_contact">Add contact</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>

    <!-- fragment contacts -->
    <string name="s_has_been_removed">%s has been removed</string>
    <string name="restore">Restore</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="contacts_removed">Contacts has been removed</string>
    <string name="contact_removed">Contact has been removed</string>
    <string name="no_results_found">No results found</string>
    <string name="you_can_see_more_contacts_in_the_recommendation">You can see more contacts in the recommendation</string>

    <!-- fragment detail view -->
    <string name="home_address">Home address</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="add_to_my_contacts">Add to my contacts</string>

    <!-- fragment profile -->
    <string name="settings">Settings</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>

    <!-- most often used -->
    <string name="username">Username</string>
    <string name="career">Career</string>

    <!-- errors -->
    <string name="not_correct_input">Invalid email or password</string>
    <string name="automatic_login_error">Automatic login error</string>
    <string name="register_error_user_exist">User already exists</string>
    <string name="invalid_request">Invalid request</string>
    <string name="invalid_username">Invalid user name</string>
    <string name="invalid_mobile_phone">Invalid mobile phone</string>
    <string name="already_have_this_a_contact">Already have this a contact</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="phone_must_be_at_least_10_digits_long">Phone must be at least 10 digits long</string>
    <string name="user_name_must_contain_at_least_3_letters">User name must contain at least 3 letters</string>
    <string name="No_internet_connection">No internet connection</string>

    <!-- fragment users -->
    <string name="add">Add</string>
    <string name="users">Users</string>

    <!-- splash fragment -->
    <string name="repeat">Repeat</string>

    <!-- search fragment -->
    <string name="search">Search</string>

    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="example_message_text">text text text</string>
    <string name="start_server">Start server</string>
</resources>