<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/example6"
        android:text="@string/add_contact"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:fontFamily="@font/example6"
        android:text="@string/username"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/textInputFullName"
        app:layout_constraintTop_toBottomOf="@id/textViewAddContact" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextFullName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCareerNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:fontFamily="@font/example6"
        android:text="@string/career"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/textInputFullName"
        app:layout_constraintTop_toBottomOf="@id/textInputFullName" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputCareer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCareerNew">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCareer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bc_gray_frame"
        android:fontFamily="@font/example6"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="@id/textInputCareer"
        app:layout_constraintTop_toBottomOf="@id/textInputCareer"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bc_view_my_contacts"
        android:fontFamily="@font/example6"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="@id/textInputCareer"
        app:layout_constraintTop_toBottomOf="@id/textInputCareer"
        app:layout_constraintWidth_percent="0.4" />
</androidx.constraintlayout.widget.ConstraintLayout>