<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemUser"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_user_height"
    android:layout_marginHorizontal="@dimen/normal_margin"
    android:layout_marginTop="@dimen/small_margin"
    android:background="@color/white">

    <View
        android:id="@+id/viewBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_message_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:src="@drawable/ic_user_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:fontFamily="@font/wix_madefor_bold"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewUserPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/exo_regular"
        android:text="@string/career"
        android:textColor="@color/gray"
        android:textSize="@dimen/user_career_size"
        app:layout_constraintStart_toEndOf="@id/imageViewUserPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_message_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:fontFamily="@font/noto_sans"
        android:layout_marginStart="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewName"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
