<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintBottom_toTopOf="@id/viewBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@android:color/transparent"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@android:color/transparent"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size"
            app:layout_constraintBottom_toBottomOf="@id/textViewSettings"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewSettings" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewSendProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send"
            android:layout_marginBottom="@dimen/normal_margin"
            app:layout_constraintStart_toStartOf="@id/imageViewProfileImage"
            app:layout_constraintEnd_toEndOf="@id/imageViewProfileImage"
            app:layout_constraintBottom_toTopOf="@id/imageViewProfileImage"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewProfileImage"
            android:layout_width="@dimen/photo_size"
            android:layout_height="@dimen/photo_size"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toBottomOf="@id/viewTop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewSettings"
            app:layout_constraintVertical_bias="0.25"
            app:shapeAppearanceOverlay="@style/rounded" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:fontFamily="@font/josefin_sans"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_large_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewProfileImage"
            tools:text="@string/username" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCareer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/wix_madefor_regular"
            android:text="@string/career"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_normal_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewHomeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:fontFamily="@font/wix_madefor_regular"
            android:text="@string/home_address"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_normal_size"
            app:layout_constraintBottom_toBottomOf="@id/viewTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCareer"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/buttonMessageTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewTop">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconLinkedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_linkedin" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_instagram" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonMessageTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/bc_edit_profile"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal_size"
            app:layout_constraintBottom_toTopOf="@id/buttonViewContacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonViewContacts"
            android:layout_width="0dp"
            android:layout_height="@dimen/view_contacts_height"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/bc_view_my_contacts"
            android:letterSpacing="0.2"
            android:text="@string/view_my_contacts"
            android:textColor="@color/white"
            android:textSize="@dimen/text_normal_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/imageViewProfileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
