<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemUser"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_user_height"
    android:layout_marginHorizontal="@dimen/normal_margin"
    android:layout_marginTop="@dimen/small_margin"
    android:background="@color/white">

    <View
        android:id="@+id/viewBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bc_user_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxSelectMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:button="@drawable/ic_checkbox_delete"
        android:checked="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewUserPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:src="@drawable/ic_user_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkboxSelectMode"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:fontFamily="@font/example3"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewUserPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCareer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/example2"
        android:text="@string/career"
        android:textColor="@color/gray"
        android:textSize="@dimen/user_career_size"
        app:layout_constraintStart_toEndOf="@id/imageViewUserPhoto"
        app:layout_constraintTop_toBottomOf="@id/textViewName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:fontFamily="@font/example8"
        android:text="@string/add"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_normal_size"
        android:drawableEnd="@drawable/ic_add_item"
        android:drawablePadding="@dimen/small_margin"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewDoneAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:src="@drawable/ic_success_add_contact"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/textViewAdd"
        app:layout_constraintEnd_toEndOf="@id/textViewAdd"
        app:layout_constraintStart_toStartOf="@id/textViewAdd"
        app:layout_constraintTop_toTopOf="@id/textViewAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>
